force/src/objects/Request__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a set of features that provides the ability to handle a capability.</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Build_End__c</fullName>
        <label>Actual Build End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Build_Start__c</fullName>
        <label>Actual Build Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Time__c</fullName>
        <label>Actual Time</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_CRP__c</fullName>
        <label>Build CRP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Comments__c</fullName>
        <label>Build Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Grouping__c</fullName>
        <label>Build Grouping</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Status__c</fullName>
        <inlineHelpText>Not Started: Build not started
In Progress: Build started
Complete: Build complete, need review 
Pending Feedback: Stalled, awaiting feedback 
Ready for CRP: Prepared for CRP
Ready for Sign-Off: Reviewed and approved in CRP</inlineHelpText>
        <label>Build Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FFFF66</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Pending Feedback</fullName>
                    <color>#FFFF66</color>
                    <label>Pending Feedback</label>
                </value>
                <value>
                    <fullName>Ready for Design CRP</fullName>
                    <color>#009900</color>
                    <label>Ready for Design CRP</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#009900</color>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Ready for Build CRP</fullName>
                    <color>#009900</color>
                    <label>Ready for Build CRP</label>
                </value>
                <value>
                    <fullName>Ready for Build Sign-off</fullName>
                    <color>#78C953</color>
                    <label>Ready for Build Sign-off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_Total__c</fullName>
        <label>Build Total</label>
        <summarizedField>Application_Inventory__c.Total_Build__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Build_Transition_Status__c</fullName>
        <label>Build Transition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Transition</fullName>
                </value>
                <value>
                    <fullName>Transition w/ Risk</fullName>
                </value>
                <value>
                    <fullName>Blocked by Sign-Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE( 
Business_Benefit__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <inlineHelpText>Low: Does Not Align to a Business Driver
Medium: Aligns to One Business Driver
High: Aligns to More than Two Defined Business Drivers</inlineHelpText>
        <label>Business Need</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Process_Step__c</fullName>
        <label>Business Process Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Data/Visibility/User Admin/Mobile</fullName>
                </value>
                <value>
                    <fullName>Account - Create New Account</fullName>
                </value>
                <value>
                    <fullName>Account - Edit and Maintain Account</fullName>
                </value>
                <value>
                    <fullName>Account - Validate Pending Account</fullName>
                </value>
                <value>
                    <fullName>Activity/Task - Create and Complete Task</fullName>
                </value>
                <value>
                    <fullName>Activity/Task - Create and Update Event</fullName>
                </value>
                <value>
                    <fullName>Campaign - Create and Manage Campaign</fullName>
                </value>
                <value>
                    <fullName>Case - Create and Complete Case</fullName>
                </value>
                <value>
                    <fullName>Contact - Create New Contact</fullName>
                </value>
                <value>
                    <fullName>Contact - Edit/Maintain Existing Contact</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Approvals</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Article Feedback</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Create Articles</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Initiate KM Project</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Publish Articles</fullName>
                </value>
                <value>
                    <fullName>Knowledge - Search for Articles</fullName>
                </value>
                <value>
                    <fullName>Lead - Assign New Lead</fullName>
                </value>
                <value>
                    <fullName>Lead - Create New Lead and Convert</fullName>
                </value>
                <value>
                    <fullName>Network - Manage Doctor Recruitment</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Drive Opp. to Closure</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Review Sales Pipeline</fullName>
                </value>
                <value>
                    <fullName>VSPOne - View and Edit VSPOne Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <inlineHelpText>Emergency: A known error in existing functionality 
Feature/Function: Enhancement or modification to an existing functionality 
New Capability: New functionality to support process 
Ongoing Maintenance: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Feature/Function</fullName>
                </value>
                <value>
                    <fullName>New Capability</fullName>
                </value>
                <value>
                    <fullName>Ongoing Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                    <default>true</default>
                    <label>Project</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Request_ID__c</fullName>
        <label>Client Request ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <label>Reason Closed/Deferred</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred: Waiting Architecture Availabiity</fullName>
                </value>
                <value>
                    <fullName>Deferred: Product Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Deferred: Waiting Approval</fullName>
                </value>
                <value>
                    <fullName>Closed: Architecturally Not Recommended</fullName>
                </value>
                <value>
                    <fullName>Closed: Satisfied Through Business Process Change</fullName>
                </value>
                <value>
                    <fullName>Closed: Canceled by Business</fullName>
                </value>
                <value>
                    <fullName>Closed: Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed: Technically Not Feasible</fullName>
                </value>
                <value>
                    <fullName>Closed: Existing Functionality</fullName>
                </value>
                <value>
                    <fullName>Deferred: Aligned to Future State Capabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Impact__c</fullName>
        <label>Communication Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_on_Business_Drivers__c</fullName>
        <label>Count on Business Drivers</label>
        <summaryForeignKey>Value_Tree_Alignment__c.Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Planning_Impact__c</fullName>
        <label>Deployment Planning Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for the Design phase.</description>
        <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_CRP__c</fullName>
        <label>Design CRP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Total__c</fullName>
        <label>Design Total</label>
        <summarizedField>Application_Inventory__c.Total_Design__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimate_Assumption__c</fullName>
        <label>Estimate Assumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Functional Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_to_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact to Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_to_Deployment_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact to Deployment Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_to_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact to Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Issue__c</fullName>
        <label>JIRA Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Number__c</fullName>
        <formula>HYPERLINK(&quot;https://jira.vspglobal.com/browse/&quot;&amp;JIRA_Issue__c,JIRA_Issue__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JIRA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Impacting__c</fullName>
        <inlineHelpText>Which lines of business are impacted by the request.</inlineHelpText>
        <label>LOB Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSP Global</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Altair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Compliance__c</fullName>
        <inlineHelpText>Low: Not Required to Implement the Requirement to Stay Compliant 
Medium: Recommended to Implement the Requirement to Stay Compliant 
High: Required to Implement the Requirement to Stay Compliant</inlineHelpText>
        <label>Legal &amp; Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of Effort formula field</description>
        <formula>if(Level_of_Effort__c = &quot;High&quot;,1, 
if(Level_of_Effort__c = &quot;Medium&quot;,2, 
If(Level_of_Effort__c = &quot;Low&quot;,3, 
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Level of Effort</description>
        <formula>IF(TotEst__c &lt;= 8.00, &quot;Low&quot;, 
IF(TotEst__c &gt;= 8.01 &amp;&amp; TotEst__c &lt;= 20.00, &quot;Medium&quot;, 
IF(TotEst__c &gt;= 20.01, &quot;High&quot;,&quot;&quot;)))</formula>
        <inlineHelpText>Low: Requires Less Than 8 Days of Work Effort 
Medium: Requires 8.01 - 20 Days of Work Effort 
High: Requires More Than 20.01 Days of Work Effort</inlineHelpText>
        <label>Level of Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_Impact__c</fullName>
        <inlineHelpText>Low: Benefits Only One LOB
Medium: Benefits Some LOBs
High: Benefits All LOBs</inlineHelpText>
        <label>Line of Business Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Notes</label>
        <referenceTo>Meeting_Notes__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Request does not need an estimate because the request is related to a Request with an estimate.</inlineHelpText>
        <label>No Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Contingency_Estimate__c</fullName>
        <label>Non-Contingency Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nudge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nudge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Days_Planned_Build_Missed__c</fullName>
        <formula>IF(Actual_Build_End__c &gt; Planned_Build_Complete__c, Actual_Build_End__c - Planned_Build_Complete__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Planned Build Missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_LOBs__c</fullName>
        <formula>IF(INCLUDES( LOB_Impacting__c ,&apos;VSP Global&apos;),1,0) 
+ IF(INCLUDES(LOB_Impacting__c ,&apos;Marchon&apos;),1,0) 
+ IF(INCLUDES(LOB_Impacting__c ,&apos;Eyefinity&apos;),1,0) 
+ IF(INCLUDES(LOB_Impacting__c ,&apos;Optics&apos;),1,0) 
+ IF(INCLUDES(LOB_Impacting__c ,&apos;Vision Care&apos;),1,0) 
+ IF(INCLUDES(LOB_Impacting__c ,&apos;Altair&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of LOBs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objects_Affected__c</fullName>
        <description>List of objects modified in order to meet the requirements</description>
        <inlineHelpText>List of objects modified in order to meet the requirements</inlineHelpText>
        <label>Objects Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offshore_Actual_in_Days__c</fullName>
        <formula>Actual_Time__c  / 9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offshore Actual in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
        <label>Overall Priority</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies &quot;Parent Requirement&quot; and allow us to group detailed Requirements for related functionality into logical capabilities. This is typically the high-level Business Requirement.</inlineHelpText>
        <label>Parent Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Build_Complete__c</fullName>
        <label>Planned Build End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Build_Start__c</fullName>
        <label>Planned Build Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates each request to a Release or Project.</description>
        <inlineHelpText>This is the suggested release in which the requirement should be deployed.</inlineHelpText>
        <label>Committed Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Committed Release)</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Instructions__c</fullName>
        <label>Post-Deployment Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment_Instructions__c</fullName>
        <label>Pre-Deployment Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Whom on Accenture&apos;s Team is responsible for validating the request.</inlineHelpText>
        <label>Accenture Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <label>Regions Requesting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Parent_Request_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates parent/child hierarchy or Requirements that have been closed due to duplication. Input the related Parent Requirement for the Child Requirement record, or the Requirement that shall remain active if relating and closing for duplication reasons.</inlineHelpText>
        <label>Related/Parent Request ID</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests (Related/Parent Request)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to link duplicate requirements together or to group similar requirements.</inlineHelpText>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Rank__c</fullName>
        <description>Used to help project management prioritize &amp; filter Requests</description>
        <inlineHelpText>4 = Must (Next Release)
3.5 = Alternate Candidate (Next Release)
3 = Must (Future Release)
2 = Want
1 = Nice to Have
0 = Remove/Cancel</inlineHelpText>
        <label>Release Rank</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The release in which the request will actually be deployed. If the requirement has not been approved for a release, there should not be a value in this field.</inlineHelpText>
        <label>Planned Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Planned Release)</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_From_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed From Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requests removed from a scheduled release.</description>
        <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
        <label>Removed from Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Request Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <description>Captures the requirement title</description>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Request Statement</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Custom Code</fullName>
                </value>
                <value>
                    <fullName>Data Access</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_LOB__c</fullName>
        <label>Requesting LOB</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSP Global</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Altair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person originally submitting the request.</description>
        <inlineHelpText>Name of the person originally submitting the request.</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>